[gd_scene load_steps=9 format=3 uid="uid://cii6xqlach24o"]

[ext_resource type="Script" path="res://large_saucer.gd" id="1_vjc8k"]
[ext_resource type="PackedScene" uid="uid://bu34kpbmg1nlk" path="res://bullet.tscn" id="2_l8xqt"]
[ext_resource type="Texture2D" uid="uid://bdomhhx1bgpdu" path="res://sprites/saucer.png" id="3_cwvkw"]
[ext_resource type="Script" path="res://velocity_component.gd" id="4_ds54v"]
[ext_resource type="Script" path="res://edge_component.gd" id="5_5thsv"]
[ext_resource type="AudioStream" uid="uid://c0p1f7qfmgryk" path="res://audio/saucer_shoot.wav" id="6_tsask"]
[ext_resource type="AudioStream" uid="uid://d3nftvrypqho1" path="res://audio/saucer_spawn.wav" id="7_psx5w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_565wf"]
radius = 24.0
height = 70.0

[node name="LargeSaucer" type="Area2D"]
scale = Vector2(1.3, 1.3)
collision_layer = 2
collision_mask = 4
script = ExtResource("1_vjc8k")
bulletScene = ExtResource("2_l8xqt")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(2, 0, 0, 1)
texture = ExtResource("3_cwvkw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_565wf")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("4_ds54v")
maxSpeed = 150.0

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="EdgeComponent" type="Node2D" parent="."]
script = ExtResource("5_5thsv")

[node name="BulletSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_tsask")
volume_db = -13.0
max_distance = 5000.0
attenuation = 1e-05
max_polyphony = 10

[node name="SpawnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_psx5w")
max_distance = 5000.0
attenuation = 1e-05
max_polyphony = 10

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="shoot"]
